--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curry Hub</title>
+    <title>About - Curry Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Curry Hub</h1>
+        <h1>About Curry Hub</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -17,8 +17,7 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome to Curry Hub</h2>
-        <p>Your go-to destination for delicious curry recipes!</p>
+        <p>We are passionate about sharing the best curry recipes from around the world.</p>
     </main>
 </body>
 </html>
